--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,5 +1,15 @@
 .container {
     margin: 0 auto;
-    width: 1200px;
+    width: 100vw;
     padding: 0 15px;
 }
+
+
+@media screen and(min-width: 1200px) {
+    .container {
+        margin: 0 auto;
+        width: 1200px;
+        padding: 0 15px;
+    }
+}
+
