--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -32,3 +32,9 @@
         text-align: center;
     }
 }
+
+@media screen and(max-width: 480px) {
+    .section-about{
+        display: none;
+    }
+}
