--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -32,3 +32,25 @@
         color: var(--primary-grey);
     }
 }
+
+@media screen and (max-width: 480px) {
+    .section-features {
+
+        &__list {
+            display: block;
+        }
+
+        &__thumb,
+        &__item{
+            width: 100%;
+        }
+
+        &__title{
+            text-align: center;
+        }
+
+        &__item:not(:last-child){
+            margin-bottom: 30px;
+        }
+    }
+}
