--- a/sass/layout/_order.scss
+++ b/sass/layout/_order.scss
@@ -46,3 +46,34 @@
         }
     }
 }
+
+@media screen and (max-width: 480px) {
+    .section-order{
+        background-image: linear-gradient(to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url('../images/mobile/hero_sm.jpg');
+
+            padding: 118px 0;
+            &__title{
+                width: 360px;
+                font-size: 26px;
+                line-height: calc(42/26);
+    }
+}
+    
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .section-order {
+        background-image: linear-gradient(to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url('../images/mobile/hero_sm@2x.jpg');
+
+        max-width: 100vw;
+
+    }
+}
