--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@
 @import "base/section";
 @import "base/social";
 @import "base/title";
+@import "base/logo";
+@import "base/mobile-menu";
 
 @import "layout/header";
 @import "layout/footer";
