--- a/sass/base/_modal.scss
+++ b/sass/base/_modal.scss
@@ -38,6 +38,11 @@
             fill: var(--accent);
         }
     }
+
+    @media screen and(max-width: 767px){
+        max-width: 450px;
+        margin: 0 auto;
+    }
 }
 
 .form-container {
