--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -33,15 +33,19 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
     .section-features {
 
         &__list {
             display: block;
         }
 
-        &__thumb,
         &__item{
+            width: 450px;
+            margin: 0 auto;
+        }
+
+        &__thumb{
             width: 100%;
         }
 
