--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -13,6 +13,7 @@
     &__list {
         display: flex;
         gap: 30px;
+        flex-wrap: wrap;
     }
 
     &__title {
@@ -20,7 +21,7 @@
     }
 }
 
-@media screen and(max-width: 480px) {
+@media screen and(max-width: 767px) {
     .section-team{
         &__title{
             margin-bottom: 30px;
@@ -31,7 +32,8 @@
         }
 
         .teammate{
-            width: 100%;
+            width: 450px;
+            margin: 0 auto;
         }
 
         .teammate:not(:last-child){
