added for 480px

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -167,8 +167,8 @@
         display: block;
 
         &__input{
-            margin: 0;
-            width: 100%;
+            margin: 0 auto;
+            width: 450px;
             margin-bottom: 20px;
         }
         &__button{
