--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,14 +2,15 @@
     margin: 0 auto;
     width: 100vw;
     padding: 0 15px;
-}
 
+    @media screen and (max-width: 767px){
+        width: 480px;
+    }
 
-@media screen and(min-width: 1200px) {
-    .container {
-        margin: 0 auto;
+    @media screen and(min-width: 1200px) {
         width: 1200px;
-        padding: 0 15px;
     }
 }
+
+
 
