final for 480px

--- a/sass/base/_mobile-menu.scss
+++ b/sass/base/_mobile-menu.scss
@@ -34,10 +34,14 @@
     .burger__close{
         opacity: 0;
         fill: currentColor;
+
+        transition: opacity var(--animation);
     }
 
     .burger.is-open .burger__menu{
         opacity: 0;
+
+        transition: opacity var(--animation);
     }
     .burger.is-open .burger__close{
         opacity: 1;
