--- a/css/main.css
+++ b/css/main.css
@@ -169,10 +169,15 @@ img {
 .form-container__button {
   padding: 10px 55px;
   margin-top: 30px;
-  background-color: #188CE8;
+  background-color: var(--accent);
   letter-spacing: 0.06em;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-transition: background-color var(--animation);
+  transition: background-color var(--animation);
+}
+.form-container__button:hover, .form-container__button:focus {
+  background-color: #188CE8;
 }
 
 .form-modal {
@@ -409,9 +414,13 @@ img {
   .burger__close {
     opacity: 0;
     fill: currentColor;
+    -webkit-transition: opacity var(--animation);
+    transition: opacity var(--animation);
   }
   .burger.is-open .burger__menu {
     opacity: 0;
+    -webkit-transition: opacity var(--animation);
+    transition: opacity var(--animation);
   }
   .burger.is-open .burger__close {
     opacity: 1;
@@ -1112,8 +1121,7 @@ img {
 @media screen and (max-width: 767px) {
   .works__item {
     display: block;
-    width: 450px;
-    margin: 0 auto;
+    width: 100%;
   }
   .works__item:not(:last-child) {
     margin-bottom: 30px;
@@ -1174,11 +1182,19 @@ img {
   font-size: 18px;
   line-height: 1.5555555556;
   background-color: rgba(33, 150, 243, 0.9);
-  padding: 63px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   -webkit-transition: -webkit-transform var(--animation);
