--- a/sass/base/_modal.scss
+++ b/sass/base/_modal.scss
@@ -68,11 +68,18 @@
         padding: 10px 55px;
         margin-top: 30px;
 
-        background-color: #188CE8;
+        background-color: var(--accent);
 
         letter-spacing: .06em;
 
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+        transition: background-color var(--animation);
+
+        &:hover,
+        &:focus{
+            background-color: #188CE8;
+        }
     }
 }
 
