--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -67,8 +67,7 @@
 
         @media screen and(max-width: 767px){
             display: block;
-            width: 450px;
-            margin: 0 auto;
+            width: 100%;
             &:not(:last-child){
                 margin-bottom: 30px;
             }
@@ -133,12 +132,17 @@
 
 
         background-color: rgba(33, 150, 243, 0.9);
-        padding: 63px 24px;
+        padding-left: 24px;
+        padding-right: 24px;
 
         width: 100%;
+        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
+
+        display: flex;
+        align-items: center;
 
         transform: translateY(100%);
 
