--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -3,7 +3,11 @@
     width: 100vw;
     padding: 0 15px;
 
-    @media screen and (max-width: 767px){
+    @media screen and (max-width: 479) {
+        width: 480px;
+    }
+
+    @media screen and (max-width: 767px) and (min-width: 480px){
         width: 480px;
     }
 
