--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -31,8 +31,13 @@
             display: block;
         }
 
-        .teammate{
-            width: 450px;
+        .teammate {
+            width: 100%;
+
+            @media screen and (min-width: 480px) {
+                width: 450px;
+            }
+
             margin: 0 auto;
         }
 
