--- a/css/main.css
+++ b/css/main.css
@@ -90,17 +90,21 @@ img {
 
 .container {
   margin: 0 auto;
-  width: 100vw;
   padding: 0 15px;
 }
 @media screen and (max-width: 479) {
   .container {
-    width: 480px;
+    width: 100vw;
   }
 }
 @media screen and (max-width: 767px) and (min-width: 480px) {
   .container {
     width: 480px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container {
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -120,7 +124,13 @@ img {
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
+  .modal {
+    width: calc(100vw - 15px);
+    height: auto;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 480px) {
   .modal {
     width: 450px;
     height: 609px;
