--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,14 +1,17 @@
 .container {
     margin: 0 auto;
-    width: 100vw;
     padding: 0 15px;
-
+    
     @media screen and (max-width: 479) {
-        width: 480px;
+        width: 100vw;
     }
 
     @media screen and (max-width: 767px) and (min-width: 480px){
         width: 480px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: 768px;
     }
 
     @media screen and(min-width: 1200px) {
