--- a/sass/base/_modal.scss
+++ b/sass/base/_modal.scss
@@ -3,9 +3,12 @@
     top: 50%;
     left: 50%;
 
+    @media screen and(max-width: 479px){
+        width: calc(100vw - 15px);
+        height: auto;
+    }
 
-
-    @media screen and(max-width: 767px){
+    @media screen and(max-width: 767px) and (min-width: 480px){
         width: 450px;
         height: 609px;
     }
