--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,9 +1,9 @@
 .section {
-    padding: 94px 0px;
-}
-
-@media screen and(max-width: 767px) {
-    .section {
+    @media screen and(max-width: 1199px) {
         padding: 60px 0;
+    }
+
+    @media screen and(min-width: 1200px) {
+        padding: 94px 0px;
     }
 }
