--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -14,6 +14,8 @@
         display: flex;
         gap: 30px;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
     }
 
     &__title {
@@ -23,9 +25,6 @@
 
 @media screen and(max-width: 767px) {
     .section-team{
-        &__title{
-            margin-bottom: 30px;
-        }
 
         &__list{
             display: block;
